@@ -1,3 +1,9 @@
+2015-06-29  gepr  <gepr@tempusdictum.com>
+
+	* plot-cols.r: New script to plot any number of columns from a set of csv files.
+
+	* cmp-by-model.r: Use semi-log plots.
+
 2015-06-22  gepr  <gepr@tempusdictum.com>
 
 	* paramtest.sh: Simple script to execute Parameters.main().
